# libpixelif

./: CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  COPYRIGHT.md  COPYRIGHT.txt  Makefile  Makefile.am  Makefile.in  README.md  README.txt  config-libs.m4  config-subst.m4  config.default.mk  config.macports.mk  configure  configure.ac
debian/: changelog  control  copyright  rules  watch
debian/patches/: noto-fonts-and-automake-1_15_1.diff  noto-fonts-and-automake-1_15_1.patch  pkgconfig-crosscompile  series
doc/: changelog.xml  copyright.xml  create-mds.sh  create-txts.sh  readme.xml
src/: libpixelif.pc.in
src/locales/: Makefile  fr_FR.txt  libpixelif_locales.c  libpixelif_locales.h  locale_setup.c
src/locales/de_DE/: libpixelif_i18n.txt
src/locales/en_US/: libpixelif_i18n.txt
src/locales/fr_FR/: libpixelif_i18n.txt
src/pixel_interface/: Makefile  Makefile.am  Makefile.in  freetype_wordwrapper.c  freetype_wordwrapper.h  pixel_interface.c  pixel_interface.h  true_type_factory.c  true_type_factory.h  true_type_font.c  true_type_font.h  true_type_wordwrapper.c  true_type_wordwrapper.h
src/screen_interface/: screen_pixel_interface.h
